Initial (and partial) HMAC support

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -6,13 +6,22 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.2/jasmine.css">
 
   <script>
-      function bin2hex(data) {
-          var i, f = 0, a = [], buffer = new Uint8Array(data);
-          f = buffer.length;
+      function bin2hex(buffer) {
+          var i, f = 0, a = [], data = new Uint8Array(buffer);
+          f = data.length;
           for (i = 0; i < f; i++) {
-              a[i] = buffer[i].toString(16).replace(/^([\da-f])$/, "0$1");
+              a[i] = data[i].toString(16).replace(/^([\da-f])$/, "0$1");
           }
           return a.join('');
+      }
+      function hex2bin(str) {
+          var i, data, HEX = "0123456789abcdef";
+          data = new Uint8Array(new ArrayBuffer(str.length >> 1));
+          str = str.toLowerCase();
+          for (i = 0; i < str.length; i += 2) {
+            data[i>>1] = HEX.indexOf(str.charAt(i)) << 4 | HEX.indexOf(str.charAt(i+1));
+          }
+          return data.buffer;
       }
   </script>
 
@@ -25,7 +34,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/digestSpec.js"></script>
-
+  <script type="text/javascript" src="spec/macSpec.js"></script>
 </head>
 <body>
 
