reorganized test files

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -33,8 +33,10 @@
   <script type="text/javascript" src="../digest.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/digestSpec.js"></script>
-  <script type="text/javascript" src="spec/macSpec.js"></script>
+  <script type="text/javascript" src="spec/core.spec.js"></script>
+  <script type="text/javascript" src="spec/sha1.spec.js"></script>
+  <script type="text/javascript" src="spec/sha256.spec.js"></script>
+  <script type="text/javascript" src="spec/md5.spec.js"></script>
 </head>
 <body>
 
