PBKDF2 implementation and tests

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -38,6 +38,7 @@
   <script type="text/javascript" src="spec/sha256.spec.js"></script>
   <script type="text/javascript" src="spec/md5.spec.js"></script>
   <script type="text/javascript" src="spec/pbkdf1.spec.js"></script>
+  <script type="text/javascript" src="spec/pbkdf2.spec.js"></script>
 </head>
 <body>
 
