--- a/test/SpecRunner.pbkdf.html
+++ b/test/SpecRunner.pbkdf.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="lib/jasmine-2.0.2/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.2/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.2/boot.js"></script>
+  <script type="text/javascript" src="lib/jasmine-jsreporter/jasmine-jsreporter.js"></script>
 
   <!-- helper functions -->
   <script type="text/javascript" src="spec/helper.js"></script>
@@ -17,12 +18,15 @@
   <script type="text/javascript" src="../build/digest.min.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/core.spec.js"></script>
-  <script type="text/javascript" src="spec/sha1.spec.js"></script>
-  <script type="text/javascript" src="spec/sha256.spec.js"></script>
-  <script type="text/javascript" src="spec/md5.spec.js"></script>
   <script type="text/javascript" src="spec/pbkdf1.spec.js"></script>
   <script type="text/javascript" src="spec/pbkdf2.spec.js"></script>
+
+  <script type="text/javascript">
+    (function() {
+      var jasmineEnv = jasmine.getEnv();
+      jasmineEnv.addReporter(new jasmine.JSReporter2());
+    })();
+  </script>
 </head>
 <body>
 
