+ Fix some errors in the test files + Add a spec runner with all test cases

--- a/test/SpecRunner.all.html
+++ b/test/SpecRunner.all.html
@@ -18,6 +18,10 @@
   <script type="text/javascript" src="../build/digest.min.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/core.spec.js"></script>
+  <script type="text/javascript" src="spec/sha1.spec.js"></script>
+  <script type="text/javascript" src="spec/sha256.spec.js"></script>
+  <script type="text/javascript" src="spec/md5.spec.js"></script>
   <script type="text/javascript" src="spec/pbkdf1.spec.js"></script>
   <script type="text/javascript" src="spec/pbkdf2.spec.js"></script>
 
